Epic: sidebar improvements (#4442)
* Feat(Sidebar): Add pinned safes list to sidebar and accounts page [SW-304] (#4412)

* feat: allow pinning and unpinning accounts

* feat: allow pinning multichain safes

* fix: pinning of multichain safes

* feat: simplify all accounts list

* feat: load safe info when safelist item is scrolled into view

* feat: remove safes when unpinning if they werent added before being pinned

* fix: pinning behaviour of multichain safes

* fix: multichain sub itemstyles

* feat: add empty state for pinned list

* fix: lint errors

* fix: show threshold for counterfactual safes

* fix: mobile layout

* restore loading balances for safes

* fix: subaccount item layout, and app crashing on unpin

* feat: expand all accounts if there are no pinned safes

* fix: flickering when loading all safes

* fix: account for default threshold and owner numbers

* reduce transition animation duration for pinning and unpinning safes

* reduce space between chains and balance

* Feat(sidebar): sort safes by name and recently used [SW-307] (#4458)

* Feat: add option to sort by recently visited and by name

* tests: add new properties to unit tests

* fix: make order by preference persist

* feat: sort sub account items by name and recently visited

* refactor: fix incorrect variable names and remove console log

* Feat(sidebar): filter safes by search query [SW-305] (#4484)

* feat: filter safes by search query

* feat: display current order by option. fix text colors

* feat: search by adddress name and chain name

* fix: use ignoreLocation to match the final address characters when searching

* add tracking event for search

* fix: cypress tests

* Feat(sidebar): Add tracking events for search, sorting, and pinning/unpinning safes [SW-308] (#4500)

* track the number of pined safes on the accounts page

* feat: track pinning, unpinning, and sorting

* fix: separate watchlist and pined 

--- a/src/features/myAccounts/components/AccountItems/styles.module.css
+++ b/src/features/myAccounts/components/AccountItems/styles.module.css
@@ -1,33 +1,3 @@
-.container {
-  container-type: inline-size;
-  container-name: my-accounts-container;
-  display: flex;
-  justify-content: center;
-}
-
-.myAccounts {
-  width: 100%;
-  max-width: 600px;
-  margin: var(--space-2);
-}
-
-.safeList {
-  padding: var(--space-3);
-  margin-bottom: var(--space-3);
-}
-
-.safeList :last-child {
-  margin-bottom: 0;
-}
-
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: var(--space-3) 0;
-  gap: var(--space-1);
-}
-
 .listItem {
   border: 1px solid var(--color-border-light);
   border-radius: var(--space-1);
@@ -69,6 +39,7 @@
   border-radius: 6px;
   border: 1px solid var(--color-border-light);
 }
+
 .subItem.currentListItem .borderLeft {
   border-left: 4px solid var(--color-secondary-light);
 }
@@ -81,15 +52,16 @@
 .safeLink {
   display: grid;
   padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
-  grid-template-columns: 60px 3fr 3fr minmax(auto, 2fr);
+  grid-template-columns: 60px 10fr 2fr 3fr;
   align-items: center;
 }
 
+.multiSafeLink {
+  grid-template-columns: 60px 8fr 5fr 3fr;
+}
+
 .safeSubLink {
-  display: grid;
-  padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
   grid-template-columns: 60px 3fr minmax(auto, 2fr);
-  align-items: center;
 }
 
 .safeName,
@@ -100,52 +72,11 @@
 }
 
 .listHeader {
-  padding-bottom: var(--space-1);
   display: flex;
-  justify-content: space-between;
 }
 
-.listTitle {
-  margin: auto 0;
-}
-
-.card {
-  margin: auto;
-  padding: var(--space-3);
-  display: flex;
-  flex-direction: column;
-  background-color: transparent;
-}
-
-.card :global .MuiCardHeader-root,
-.card :global .MuiCardContent-root {
-  padding: 0;
-}
-
-.cardHeader {
-  text-align: center;
-}
-
-.infoIcon {
-  vertical-align: middle;
-  width: 1rem;
-  height: 1rem;
-  margin: 4px;
-  color: var(--color-text-secondary);
-}
-
-.chip {
-  border-radius: 4px;
-  background-color: var(--color-warning-background);
-  margin-top: 4px;
-}
-
-.pendingAccount {
-  background-color: var(--color-info-light);
-}
-
-.pendingLoopIcon {
-  color: var(--color-info-dark) !important;
+.listHeader svg path {
+  stroke: var(--color-text-primary);
 }
 
 .multiChains {
@@ -165,11 +96,15 @@
   justify-content: flex-end;
 }
 
-@media (max-width: 899.95px) {
-  .container {
-    width: auto;
-  }
+.chipSection {
+  width: 100%;
+}
 
+.chipSection:empty {
+  display: none;
+}
+
+@media (max-width: 899.95px) {
   .safeLink {
     padding-right: 0;
   }
@@ -200,28 +135,8 @@
   .multiChains {
     justify-content: flex-start;
   }
-}
 
-@container my-accounts-container (max-width: 500px) {
-  .myAccounts {
-    margin: 0;
-  }
-
-  .header {
-    padding: var(--space-3);
-    border-bottom: 1px solid var(--color-border-light);
-  }
-
-  .safeList {
-    border-radius: 0;
-    margin-bottom: 0;
-  }
-
-  .title {
-    font-size: 20px;
-  }
-
-  .card {
-    border-top: 1px solid var(--color-border-light);
+  .chainIndicator {
+    justify-content: flex-start;
   }
 }
